cppcheck_report.txt
main.cpp:23:10: style: The scope of the variable 'chr' can be reduced. [variableScope]
    char chr;
         ^
main.cpp:58:30: error: Uninitialized struct member: token.value [uninitStructMember]
            tokens.push_back(token);
                             ^
main.cpp:129:28: error: Uninitialized variable: r [uninitvar]
            result.value = r;
                           ^
main.cpp:130:24: error: Uninitialized struct member: result.precedence [uninitStructMember]
            stack.push(result);
                       ^
main.cpp:73:19: style: Variable 'queueEnd' is assigned a value that is never used. [unreadVariable]
    char queueEnd = 0;
                  ^
main.cpp:74:19: style: Variable 'stackTop' is assigned a value that is never used. [unreadVariable]
    char stackTop = 0;
                  ^
nofile:0:0: information: Cppcheck cannot find all the include files (use --check-config for details) [missingIncludeSystem]

